force-app/main/default/objects/Payment_Request__e/Payment_Request__e.object-meta.xml
<CustomObject>
    <description>Integration of Pricing Information from SFS to Wennsoft</description>
    <label>Payment Request</label>
    <pluralLabel>Payment Requests</pluralLabel>
</CustomObject>