force-app/main/default/objects/Payment_Request__e/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>