force-app/main/default/objects/Payment_Request__e/fields/Work_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Id__c</fullName>
    <label>Work Order Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>